added basic colors, fonts, and other css thingies, added favicon, changed proposal datetime display to be english

--- a/app/views/open_conference_ware/proposals/_list.html.erb
+++ b/app/views/open_conference_ware/proposals/_list.html.erb
@@ -69,7 +69,7 @@ records = OpenConferenceWare::Proposal.sort(records, params[:sort] || "title", p
 
         <% if kind == :proposals %>
           <td class='date'>
-            <%= record.submitted_at.localtime.to_s if record.submitted_at.present? %>
+            <%= record.submitted_at.localtime.strftime('%b %e, %l:%M %p') if record.submitted_at.present? %>
           </td>
         <% end %>
       </tr>
