Fixed the GD CSS

--- a/app/views/layouts/open_conference_ware/application.html.erb
+++ b/app/views/layouts/open_conference_ware/application.html.erb
@@ -20,6 +20,7 @@
 
     <!-- Stylesheets -->
     <%= stylesheet_link_tag 'open_conference_ware/application' %>
+    <%= stylesheet_link_tag 'application' %>
     <%= yield :stylesheets %>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
