--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,5 +1,6 @@
 body {
-  background: #f5f5f5 url(http://www.chicktech.org/wp-content/uploads/2013/01/bg-01-2.png);
+  /* background: #f5f5f5 url(http://www.chicktech.org/wp-content/uploads/2013/01/bg-01-2.png); */
+  background: #f5f5f5 url(/assets/chicktech_bg.png);
   color: #888;
   font: 12px/20px Verdana, Geneva, Tahoma, sans-serif;
 }
