--- a/app/views/open_conference_ware/events/index.html.erb
+++ b/app/views/open_conference_ware/events/index.html.erb
@@ -1,9 +1,3 @@
 <% page_title "Events" %>
 
-<ul>
-  <% for event in @events %>
-    <li>
-      <%= link_to h(event.title), event_proposals_path(event.slug) %>
-    </li>
-  <% end %>
-</ul>
+<div>Index stuff goes here</div>
