--- a/app/views/open_conference_ware/events/sponsors.html.erb
+++ b/app/views/open_conference_ware/events/sponsors.html.erb
@@ -1,3 +1,14 @@
 
-
-<div>Sponsors go here</div>
+<div>
+  <ul>
+    <li>
+      <img src="http://www.cdkglobaldigitalmarketing.com/wp-content/uploads/2014/08/CDK_interim_081414-300x203.jpeg"> 
+    </li>
+    <li>
+      <img src="http://www.cdkglobaldigitalmarketing.com/wp-content/uploads/2014/08/CDK_interim_081414-300x203.jpeg"> 
+    </li>
+    <li>
+      <img src="http://www.cdkglobaldigitalmarketing.com/wp-content/uploads/2014/08/CDK_interim_081414-300x203.jpeg"> 
+    </li>
+  </ul>
+</div>
